--- a/p5 2/index copy.html
+++ b/p5 2/index copy.html
@@ -28,6 +28,6 @@
 
         </div>
         
-        <script type="text/javascript" src="sketck.js"></script>
+        <script type="text/javascript" src="sketch.js"></script>
     </body>
 </html>
